css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";



// Our variables
$base-font-family: Helvetica, Arial, sans-serif;
$base-font-size:   16px;
$small-font-size:  $base-font-size * 0.875;
$base-line-height: 1.5;

$spacing-unit:     30px;

$text-color:       #111;
$background-color: #fdfdfd;
$brand-color:      #2a7ae2;

$grey-color:       #828282;
$grey-color-light: lighten($grey-color, 40%);
$grey-color-dark:  darken($grey-color, 25%);

// Width of the content area
$content-width:    1200px;

$on-palm:          600px;
$on-laptop:        800px;



// Using media queries with like this:
// @include media-query($on-palm) {
//     .wrapper {
//         padding-right: $spacing-unit / 2;
//         padding-left: $spacing-unit / 2;
//     }
// }
@mixin media-query($device) {
    @media screen and (max-width: $device) {
        @content;
    }
}



// Import partials from `sass_dir` (defaults to `_sass`)
@import
        "base",
        "layout",
        "syntax-highlighting"
;


.jumbotron {
    background-position: center;
    text-align: center;
    min-height: 450px;
    
	position: relative;
	overflow: hidden;
}

div.jumbotron .content {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
}
    
    



h1.centered {
    text-align: center;
}

div.centered{
  text-align: center;
}

h1.post-title{
  text-shadow:
  -1px -1px 0 #FFF,
  1px -1px 0 #FFF,
  -1px 1px 0 #FFF,
  1px 1px 0 #FFF;
}

div.highlight_api{
  background-color: #c1e2b3;
  width: 100%;
  padding: 1em;
}


div.word_cloud{
  width: 600px;
  background-color: #c1e2b3;
}

div.advertisement{
  text-align: center;
}

.carousel-inner > .item > img,
.carousel-inner > .item > a > img {
  width: 70%;
  margin: auto;
}


.semi{
  background-color: rgba(255,255,255,0.5);

}

.row{
	top: 50;
	left: 30;
}


.trigger{
cursor:pointer;
background: #FFFFFF;
border:0px solid #FFFFFF;
color:#000000;
font-size:12pt;
padding:2px 5px;
box-shadow: none;
}


.trigger:active{
cursor:pointer;
color:#000000;
outline: none;
background: #FFFFFF;
border:0px solid #FFFFFF;
font-size:12pt;
padding:2px 5px;
box-shadow: none;
}

.trigger:hover{
cursor:pointer;
background: #FFFFFF;
border:0px solid #FFFFFF;
color2:#000000;
font-size:12pt;
padding:2px 5px;
box-shadow: none;
}

